0.0.4-alpha (2013-??-??)
	* Fixed: The KeyValue parser was skipping over elements when there was no
	  whitespace between them.
	* Fixed: Clearing libxml errors after parsing.

0.0.3-alpha (2013-02-22)
	* Changed: Reader::parse returns an array with 1 level less depth.
	* Added: A LibXMLException is now thrown if the XMLReader comes across an
	  error.
	* Fixed: Both the Elements and KeyValue parsers had severe issues with
	  nesting.
	* Fixed: The reader now detects when the end of the document is hit before
	  it should (because we're still parsing an element).

0.0.2-alpha (2013-02-17)
	* Added: Elements parser.
	* Added: KeyValue parser.
	* Change: Reader::parseSubTree is now named parseInnerTree, and returns
	  either a string (in case of a text-node), or an array (in the casei
	  there were child elements).
	* Added: Reader::parseCurrentElement is now public.

0.0.1-alpha (2013-02-07)
	* First alpha release

Project started: 2012-11-13